# myPostsCMS

./: app.py  init_db.py  models.py  pyproject.toml  requirements.txt
myPostsCMS/: app.py  requirements.txt
